--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
     <div class="col-md-3">
       <div class="price">
         <h2>free</h2>
-        <div class="malop">
+        <div class="malops">
           <h1><sup>$</sup>0</h1>
           <span>/per month</span>
         </div>
@@ -466,7 +466,7 @@
 <div class="col-md-3">
   <div class="price">
     <h2>free</h2>
-    <div class="malop">
+    <div class="malops">
       <h1><sup>$</sup>0</h1>
       <span>/per month</span>
     </div>
@@ -481,7 +481,7 @@
 <div class="col-md-3">
   <div class="price">
     <h2>free</h2>
-    <div class="malop">
+    <div class="malops">
       <h1><sup>$</sup>0</h1>
       <span>/per month</span>
     </div>
@@ -496,7 +496,7 @@
 <div class="col-md-3">
   <div class="price">
     <h2>free</h2>
-    <div class="malop">
+    <div class="malops">
       <h1><sup>$</sup>0</h1>
       <span>/per month</span>
     </div>
@@ -596,7 +596,24 @@
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3650.191127602037!2d90.42045271488276!3d23.81180169234495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c757e7482435%3A0xaa56e0c8229573dc!2sSultan&#39;s%20Dine%20Bashundhara!5e0!3m2!1sen!2sbd!4v1624376482263!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </div>
 <!--contract us end here-->
+<!--footer-->
+<section class="footerPP">
+  <footer>
+    <div class="footeri">
+      
+    <i class="fab fa-behance-square"></i>
+    <i class="fas fa-basketball-ball"></i>
+    <span><i class="fab fa-twitter"></i></span>
+    <i class="fab fa-facebook-f"></i>
+    <i class="fab fa-linkedin-in"></i>
+  </div>
+    <p>copyright © 2014 lucid onepage theme</p>
+  
+  </footer>
+</section>
 
+
+<!--footer end-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
 
